--- a/LUJEWebsite.app/Pages/Policy.cshtml
+++ b/LUJEWebsite.app/Pages/Policy.cshtml
@@ -6,7 +6,7 @@
 <div class="columns nine">
 	<h2>Policy</h2>
 	<p>LUJE.net is a small network located in Amsterdam, the Netherlands.</p>
-	<p>LUJE.net has an open peering policy.<br>However there is strict IRR filtering and RPKI. Filters are generated every 24 hours.<br>
+	<p>LUJE.net has an open peering policy.<br>However there is strict IRR filtering and RPKI. Filters are generated every hour.<br>
 	The provisioning of the configuration is done automatically from PeeringDB, please ensure your entry is kept up-to-date including IP addresses and number of prefixes announced.</p>
 	<p>Please contact hostmaster [at] luje.net, use the <a href="/portal/">Peering Portal</a> or check out <a rel="noopener" href="https://as212855.peeringdb.com/" target="_blank">PeeringDB</a>.</p>
 </div>
