--- a/LUJEWebsite.app/Pages/Portal/Index.cshtml
+++ b/LUJEWebsite.app/Pages/Portal/Index.cshtml
@@ -25,7 +25,7 @@
 		<h2>Peering Portal</h2>
 		<p>You can request peering with LUJE.net via the Peering Portal.</p>
 		<p>Simply login with your PeeringDB account and the Peering Portal will tell you at which internet exchange you can establish sessions and configure it automatically.</p>
-		<p><a href="/portal/login">Login with<br /><img src="~/assets/pdb-logo-coloured.png" /></a></p>
+		<p><a href="/portal/login">Login with PeeringDB<br /><img src="~/assets/pdb-logo-coloured.png" /></a></p>
 	</div>
 }
 else
